--- a/esphome/onju-voice-microwakeword.yaml
+++ b/esphome/onju-voice-microwakeword.yaml
@@ -149,12 +149,12 @@ adf_pipeline:
     id: adf_i2s_out
     i2s_audio_id: i2s_shared
     i2s_dout_pin: GPIO12
-    sample_rate: 16000
+    sample_rate: 48000
     adf_alc: true
     alc_max: .5
-    bits_per_sample: 32bit
     fixed_settings: true
     channel: left
+    use_apll: true
 
   - platform: i2s_audio
     type: audio_in
@@ -163,9 +163,9 @@ adf_pipeline:
     i2s_din_pin: GPIO17
     channel: left
     pdm: false
-    sample_rate: 16000
-    bits_per_sample: 32bit
+    sample_rate: 48000
     fixed_settings: true
+    use_apll: true
 
 microphone:
   - platform: adf_pipeline
